vendor/cache/ruby/2.5.0/extensions/x86_64-linux/2.5.0/json-1.8.3/gem_make.out
current directory: /home/brendo1001/mywork/mywebsite/site_source/vendor/cache/ruby/2.5.0/gems/json-1.8.3/ext/json/ext/generator
<<<<<<< HEAD
/usr/bin/ruby2.5 -r ./siteconf20190201-6592-383u56.rb extconf.rb
=======
/usr/bin/ruby2.5 -r ./siteconf20190201-25611-s60q2v.rb extconf.rb
>>>>>>> develop
creating Makefile

current directory: /home/brendo1001/mywork/mywebsite/site_source/vendor/cache/ruby/2.5.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /home/brendo1001/mywork/mywebsite/site_source/vendor/cache/ruby/2.5.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c: In function ‘generate_json’:
generator.c:861:25: error: ‘rb_cFixnum’ undeclared (first use in this function); did you mean ‘mFixnum’?
     } else if (klass == rb_cFixnum) {
                         ^~~~~~~~~~
                         mFixnum
generator.c:861:25: note: each undeclared identifier is reported only once for each function it appears in
generator.c:863:25: error: ‘rb_cBignum’ undeclared (first use in this function); did you mean ‘rb_cFixnum’?
     } else if (klass == rb_cBignum) {
                         ^~~~~~~~~~
                         rb_cFixnum
Makefile:242: recipe for target 'generator.o' failed
make: *** [generator.o] Error 1

make failed, exit code 2
